# kb-agent

./: .claudeignore  .env.example  .gitignore  CLAUDE.md  DESIGN.md  LICENSE  Makefile  README.en.md  README.md  WORKFLOW.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  config.toml.example  entrypoint.sh  migrate.py  pyproject.toml
backend/app/: main.py
backend/app/api/: admin.py  auth.py  cases.py  categories.py  chat.py  documents.py  folders.py  icons.py  scheduled_tasks.py  settings.py  skills.py  whatsnew.py  workspaces.py
backend/app/core/: config.py  db.py  deps.py  logging_setup.py  rate_limit.py  security.py
backend/app/engine/: base.py  claude_cli.py  codex_cli.py  openai_compat.py
backend/app/models/: auth.py  chat.py  document.py  prompt_history.py  rbac.py  scheduled_task.py  settings.py  skill.py  usage.py  whatsnew.py  whatsnew_subscription.py
backend/app/schemas/: auth.py  case.py  chat.py  document.py  icon.py  rbac.py  scheduled_task.py  skill.py
backend/app/services/: answer_service.py  answer_service_plus.py  case_service.py  category_service.py  chat_file_service.py  chat_generation.py  chat_service.py  classify_service.py  conversation_export_service.py  document_service.py  email_service.py  folder_service.py  rbac_service.py  scheduled_task_service.py  search_service.py  settings_service.py  skill_service.py  usage_service.py  user_service.py  whatsnew_service.py  whatsnew_subscription_service.py  (+1 more)
backend/claude_hooks/: _audit.py  post_tool_use.py  pre_tool_use.py  settings.json
backend/codex_hooks/: _audit.py  post_tool_use.py  pre_tool_use.py
backend/tests/: conftest.py  test_engine_env_hooks.py  test_engine_streaming.py  test_f1_folder_move.py  test_f4_f7_rbac.py  test_m0_smoke.py  test_m1_u2_models.py  test_m1_u3_security.py  test_m1_u3b_register.py  test_m1_u4_login.py  test_m1_u5_deps.py  test_m1_u6_workspaces.py  test_m1_u7_ws_member.py  test_m1_u8_admin_seed.py  test_m1_u9_domains.py  test_m2_u10_folders.py  test_m2_u1_categories.py  test_m2_u2_documents_tables.py  test_m2_u3_storage.py  test_m2_u4_upload.py  test_m2_u5_classify.py  test_m2_u6_tasks.py  test_m2_u7_list_download.py  test_m2_u8_claude_cli.py  test_m3_u1_chat_tables.py  test_m3_u2_search.py  test_m3_u3_answer.py  test_m3_u4_chat.py  test_m3_u5_history.py  test_m3_u6_history_context.py  test_m3_u8_stream.py  test_mf_u7_engine_settings.py
(+341 files in other folders)
