[project]
name = "kb-agent-backend"
version = "0.1.0"
description = "KB-Agent backend — shared Agent knowledge platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pydantic[email]>=2.6",
    "pydantic-settings>=2.2",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.1",
    "python-multipart>=0.0.9",
    "aiosmtplib>=3.0",
    "httpx>=0.27",
    "cairosvg>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "pyright>=1.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]
# S101: assert 用于测试；测试目录单独放宽
[tool.ruff.lint.per-file-ignores]
# 测试中：S101 assert、S105/S106/S107 测试用假密码
"backend/tests/*" = ["S101", "S105", "S106", "S107"]
"tests/*" = ["S101", "S105", "S106", "S107"]
# FastAPI 的 Depends() 默认参数是官方惯用法，B008 在此为误报
"backend/app/api/*" = ["B008"]
"app/api/*" = ["B008"]
"backend/app/core/deps.py" = ["B008"]
"app/core/deps.py" = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
